--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
         .about-img img {
             width: 100%;
-            height: auto;
+            height: 500px;
             display: block;
         }
 
@@ -552,7 +552,7 @@
             <div class="about-content">
                 <div class="about-img">
                     <!-- Remplacez par votre photo -->
-                    <img src="https://via.placeholder.com/500x600" alt="[Votre Nom]">
+                    <img src="images/Screenshot_20251104-104803_Gallery.jpg" alt="Jonathan Bayikehya">
                 </div>
                 <div class="about-text">
                     <h3>Découvrez qui je suis</h3>
